# Django_study

./: .gitignore
blog_project/: pyproject.toml
blog_project/blog/: admin.py  cb_views.py  forms.py  models.py  urls.py  views.py
blog_project/blog/migrations/: 0001_initial.py  0002_alter_blog_options_blog_author.py  0003_alter_blog_category.py  0004_comment.py  0005_alter_comment_options.py  0006_blog_image.py  0007_blog_thumbnail_alter_blog_author.py  0008_alter_blog_author.py
blog_project/config/: settings.py  urls.py
blog_project/member/: views.py
blog_project/templates/: about.html  base.html  form-js.html  pagination.html
blog_project/templates/registration/: login.html  signup.html
bookmark/: pyproject.toml
bookmark/bookmark/: admin.py  models.py  views.py
bookmark/bookmark/migrations/: 0001_initial.py
bookmark/config/: settings.py  urls.py
bookmark/templates/: book_info.html  book_list.html  bookmark_list.html  games.html  gugu.html
pystagram/: pyproject.toml
pystagram/config/: base.py  prod.py  urls.py
pystagram/member/: admin.py  forms.py  models.py  oauth_urls.py  oauth_views.py  urls.py  views.py
pystagram/post/: admin.py  comment_urls.py  comment_views.py  forms.py  models.py  views.py
pystagram/templates/: base.html
pystagram/utils/: email.py  forms.py  models.py
rest-blog/: README.md  pyproject.toml  requirements.txt
rest-blog/blog/: models.py  serializers.py
rest-blog/config/: local.py  prod.py  schema.py  urls.py
rest-blog/user/: serializers.py  views.py
rest-blog/utils/: jwt_serializer.py  permissions.py
(+31 files in other folders)
